@@ -1738,3 +1738,4 @@
 		Examine env var $HOME for home dir on geteuid failure.
 3.3.106	06jul20	Fix for GDK_KEY_* definitions missing in older GDK versions.
 		Fix Shift-Up/Down highlight to traverse inside groups.
+		Resync ghwlib to handled unbounded arrays.
